Sluting in 2015 vermeld

--- a/Speulstad_Oranje.mw
+++ b/Speulstad_Oranje.mw
@@ -1,11 +1,13 @@
-'''Speulstad Oranje''' (officiële Nederlaandse name: ''Speelstad Oranje'') is, op [[Toverlaand]] in [[Limburg (Nederlaand)|Limbörg]] nao, 't grootste oaverdekte [[pretpark]] van [[Nederlaand]]. 't Park is zo'n vier voetbalvelden groot en lig in 't [[Drenthe|Drèentse]] dörpien [[Oranje (Drenthe)|Oranje]], gemiente [[Midden-Drenthe]]. 't Is in-ericht in een vroggere [[eerappelmaalfebriek]] die in 1985 ekocht wördden deur de [[Slagharen|Slagharense]] ondernemer [[Hennie van der Most]].
+'''Speulstad Oranje''' (officiële Nederlaandse name: ''Speelstad Oranje'') was, op [[Toverlaand]] in [[Limburg (Nederlaand)|Limbörg]] nao, 't grootste oaverdekte [[pretpark]] van [[Nederlaand]]. 't Park was zo'n vier voetbalvelden groot en lag in 't [[Drenthe|Drèentse]] dörpien [[Oranje (Drenthe)|Oranje]], gemiente [[Midden-Drenthe]]. 't Was in-ericht in een vroggere [[eerappelmaalfebriek]] die in 1985 ekocht wördden deur de [[Slagharen|Slagharense]] ondernemer [[Hennie van der Most]].
+
+Veurjaor 2015 besleut Van der Most um 't park det naojaor te sluten. Zundag 27 september 2015 was de leste openingsdag. 't Park dreide al een steugien mit verlies.
 
 ==Soortementen dieverdaotsie==
-'t Park is veural ericht op femilies mit kiender van twei töt en mit 13 jaor old. De belangriekste attracties bint:
+'t Park was veural ericht op femilies mit kiender van twei töt en mit dartien jaor old. De belangriekste attracties waren:
 
 * [[Reuzenrad]]
-* [[Tolterschip|Piratenschip]], een tolterschip-attractie. 
-* Verscheiden [[dreimeule]]s, waoronder een peerdecarrousel, vliegtuugdreimeule, jungledreimeule en een minidreimeule. 
+* [[Tolterschip|Piratenschip]], een tolterschip-attractie
+* Verscheiden [[dreimeule]]s, waoronder een peerdecarrousel, vliegtuugdreimeule, jungledreimeule en een minidreimeule
 * Griezelhuus, een [[spoekhuus]]
 * [[Zweefmeule]]s
 * [[Gliebane|Gliebanen]]
