Stokkien uut Handboek Nedersaksische Taal- en Letterkunde

--- a/Hollaanse_expansie.mw
+++ b/Hollaanse_expansie.mw
@@ -4,12 +4,17 @@ Dizze theorie hef Kloeke uutewarkt in zien boek ''De Hollandsche expansie in de 
 
 In zien boek stelden Kloeke det de lu in [[Oaveriessel]] die ''(h)uus'' zegt, de klinkerklaank uut 't Hollaans ekregen hebt (vrogger zeden ze daor ok ''huus''), en det ze in [[Twente]] - wegens legere waordering veur [[Hollaand (gewest)|Hollaand]] - vaste hölden an de olde klaank ''oe'' (''hoes''). ''Moes'' zegt ze ok nog in 't westen van Oaveriessel, umde'j dit woord ja niet zo vake gebruukt as ''huus/hoes''.
 
-De theorie van Kloeke onderskrieft ze nog algemien. Mit de theorie oaver de Hollaanse expansie binnen Nederlaand hangt de miening van Kloeke samen det 't [[Afrikaans]] van [[Zuud-Afrika]] veural uut 't [[Zuud-Hollaans]] egruuid is; niet umdet lu uut [[Zuud-Hollaand]] an de Kaap de meerderheid uutmaakten, mar umdet ze de mieste prestige hadden. Dizze leste theorie hef hi'j uutewarkt in ''Herkomst en groei van het Afrikaans'' (1950).
+'t ''Handboek Nedersaksische Taal- en Letterkunde'' stelt:
+
+:''Vanaf de 17de eeuw dan krijgt het noordoosten van het huidige Nederland te maken met een 'Hollandse expansie' ... Vanaf de 19de eeuw evenwel moeten we niet zo zeer uitgaan van een horizontale uitbreiding van westelijke dialectkenmerken naar het oosten als wel veel meer van een verticale infiltratie van standaardtalige elementen als gevolg van veranderende communicatiepatronen'' (p. 57).
+
+De theorie van Kloeke onderskrieft ze nog algemien. Mit de theorie oaver de Hollaanse expansie binnen Nederlaand hangt de miening van Kloeke samen det 't [[Afrikaans]] van [[Zuud-Afrika]] veural uut 't [[Zuud-Hollaans]] egruuid is; niet umdet lu uut [[Zuud-Hollaand]] an de Kaap de meerderheid uutmaakten, mar umdet heur taal 't mieste prestige had. Dizze leste theorie hef hi'j uutewarkt in ''Herkomst en groei van het Afrikaans'' (1950).
 
 ==Bronnen==
 * [http://www.dbnl.org/tekst/anro001bioe01_01/kloe004.htm''Bio- en bibliografisch lexicon van de neerlandistiek''], under redactie van de Commissie voor Taal- en Letterkunde van de Maatschappij der Nederlandse Letterkunde
-* Scholtmeijer, Harrie (2006), ''Mörn! Taalgids Overijssel'', Assen: In Boekvorm Uitgevers bv. (p.64-65)
-* Sijs, Nicoline van der (2004), ''Taal als mensenwerk. Het ontstaan van het ABN'', Den Haag: Sdu Uitgevers
+* Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde'', Assen: Van Gorcum
+* Harrie Scholtmeijer (2006), ''Mörn! Taalgids Overijssel'', Assen: In Boekvorm Uitgevers bv. (p.64-65)
+* Nicoline van der Sijs (2004), ''Taal als mensenwerk. Het ontstaan van het ABN'', Den Haag: Sdu Uitgevers
 
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
