*Empty MediaWiki Message*

--- a/Liemers_(dialect).mw
+++ b/Liemers_(dialect).mw
@@ -3,7 +3,7 @@
 ==Aord==
 De Liemers kuj mit een noordwest-zuudoost-diagonaol taalkundig opdielen in de [[Olde Iesselstreek (taol)|Olde Iesselstreek]] (ten oosten van de liende; löp buten de Liemers wieder deur naor 't noorden) en de [[Zuudwestelijke Liemers]]. De Olde Iesselstreek is een oavergaankszone maank de [[Nedersaksisch]]e dialecten ([[Achterhooks]] en [[Oost-Veluws]]) in 't noorden en de [[Nederfrankisch|Nederfraankische]] ('t Kleverlaands of [[Zuud-Gelders]]) in 't zuden. D'r koomt een bulte [[isoglosse]]n bi'j menare.<ref> [[Lex Schaars]] (2008), De Achterhoek. In [[Henk Bloemhoff]], [[Jurjen van der Kooi]], [[Hermann Niebaum]] en [[Siemon Reker]] (red.), ''[[Handboek Nedersaksische Taal- en Letterkunde]]'', Assen: Van Gorcum (blz.256-7)</ref>
 
-De Zuudwestelijke Liemers heurt qua taal bi'j 't Kleverlaands.<ref>Definitie van 't Amt für rheinische Landeskunde in Bonn.</ref> De taalkundige [[Lex Schaars]] nuumt 'de invloed van het Nedersaksisch [...] geheel uitgespeeld in de Zuidwestelijke Liemers'.<ref>Lex Schaars (2008), De Achterhoek. In Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde'', Assen: Van Gorcum (blz.256)</ref>
+De Zuudwestelijke Liemers heurt qua taal bi'j 't Kleverlaands.<ref>Definitie van 't Amt für rheinische Landeskunde in Bonn.</ref> De taalkundige [[Lex Schaars]] nuumt 'de invloed van het Nedersaksisch [...] geheel uitgespeeld in de Zuidwestelijke Liemers'.<ref>Lex Schaars (2008), De Achterhoek. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde'', Assen: Van Gorcum (blz.256)</ref>
 
 ==Baanden mit 't Achterhooks==
 Partie Liemersen viendt van heur taal det die bi'j 't Achterhooks heurt.<sup>''Bron neudig''</sup> D'r is een treditionele (talig-)culturele baand maank de Liemers en de Achterhook.
@@ -17,7 +17,7 @@ De onderwiezer [[Arnold Tinneveld]] (1907-1977) tiekenden in de taal van [[Diem]
 
 [[Jan Willem Denkers]] (1917-1995) uut [[Geesteren (Berkelland)|Geestern]] skreef verhalen mit een humoristische pointe. Ze bint ebundeld in '' 't Beuksken van Hendrik Jan'' (1978) en ''Hendrik Jan schrif vedan'' (1979).
 
-[[Bernard Engelbarts]] (1937-1994) kwaamp van [['s-Heerenbarg]]. Hi'j begunden as zanger van 't Liemerse lied en skreef een antal verhalen mit as onderwarp de enkeling die as humzölf buten de evestigde örde eplaatst hef en niet begrepen wördt. De Achterhoeker schriever [[Henk Krosenbrink]] mient det Engelbarts zien verhaal 'Het witte peerd' '' 'behoort tot het beste wat in de Oost-Achterhoek geschreven is.' ''<ref>Henk Krosenbrink (2008), Streektaalletterkunde in Oost-Gelderland en op de Oost-Veluwe. In Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde'', Assen: Van Gorcum (blz.410-11)</ref>
+[[Bernard Engelbarts]] (1937-1994) kwaamp van [['s-Heerenbarg]]. Hi'j begunden as zanger van 't Liemerse lied en skreef een antal verhalen mit as onderwarp de enkeling die as humzölf buten de evestigde örde eplaatst hef en niet begrepen wördt. De Achterhoeker schriever [[Henk Krosenbrink]] mient det Engelbarts zien verhaal 'Het witte peerd' '' 'behoort tot het beste wat in de Oost-Achterhoek geschreven is.' ''<ref>Henk Krosenbrink (2008), Streektaalletterkunde in Oost-Gelderland en op de Oost-Veluwe. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde'', Assen: Van Gorcum (blz.410-11)</ref>
 
 ==Veurbield==
 't Begun van 't vertellegien ''’t Winterkoninkske'' in 't dialect van [[Pannerden]] (Zuudwestelijke Liemers):<ref>[http://www.lowlands-l.net/anniversary/liemers.php Lowlands-L: 't Vertellegien ''’t Winterkoninkske'' in 't dialect van Pannerden]</ref>
