Is 'tweyds' Achterhoeks of mut det 'tweyde' wezen? Eschreven deur iene die gien NDS kan

--- a/Manizja.mw
+++ b/Manizja.mw
@@ -11,7 +11,7 @@
 }}
 '''Manizja Dalerovna Sangin''' of '''Manizja''', of ''MANIZHA'' (geboren as '''Manizja Dalerovna Chamrajeva''', op [[8 juli]] [[1991]] in [[Doesjanbe]] in [[Tadzjikistan]]) is ne [[Ruslaand|Russische]] [[meziek|zangeresse]].
 
-Sy wyr in 2021 tweyds up et [[Eurovisie Songfesitival]] in [[Rötterdaam]] med et leed ''Russian Woman''.
+Sy wyr in 2021 tweyds up et [[Eurovisie Songfesitival]] in [[Rötterdaam|Rötterdam]] med et leed ''Russian Woman''.
 
 == Diskogroafie ==
 
