--- a/Zwols.mw
+++ b/Zwols.mw
@@ -11,7 +11,7 @@ Naodät de [[Verienigde Staoten van Amerika|Amerikaanse]] [[taalkunde|taalkundig
 Een eigenöördigeid van 't Zwols is dät de Iesselakademie 't gebruuk van de ää en ä veurskrif, määr dät 't op de mieste plekken veurkump as ''ae'', ok in t Zwolse woordeboek, dus dan wört 't maer.
 
 ==Verspreiding==
-Volgens de [[Taaltelling Nedersaksisch]] van 't [[Nedersaksisch Instituut]] (2003) zegt 61% van de ondervraogde mensen in Zwolle Zwols te kunnen praoten.<ref>Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.) (2008), ''Handboek Nedersaksische Taal- en Letterkunde'', Assen: Van Gorcum (p.310)</ref>
+Volgens de [[Taaltelling Nedersaksisch]] van 't [[Nedersaksisch Instituut]] (2003) zegt 61% van de ondervraogde mensen in Zwolle, Daeventer en Kampen heur eigen stadsdialect te kunnen praoten.<ref>Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.) (2008), ''Handboek Nedersaksische Taal- en Letterkunde'', Assen: Van Gorcum (p.310)</ref>
 
 Ze praoten veural Zwols in de oldere wieken van Zwolle zo as [[Assendörp]], de [[Pierik (Zwolle)|Pierik]], [[Kamperpoorte]] en de Zee-eldenbuurte in de [[Wipstrik]]. Kamperpoorte ef zien eigen [[sosiolekt]]; 't is ärg informeel en ston ok onder grote invloed van 't [[Bargoens]]. Een veurbeeld: ''Ze ef n bos olt veur de deure'' (ze ef grote börsten). Zuksoort uutdrukkingen kommen natuurlijk op andere plekken ok veur, maer wörren meestentieds as typerend ezien veur dit soort sosiolekten, wöör ze vaeker gebruukt wörren.
 
@@ -20,7 +20,7 @@ De Zwolstalige stukkiesbundel ''Mien Ome Jan...'' deur [[Minke Kraijer]] (Uitgev
 ==Zwols as kultuurtaal==
 [[Ofbeelding:Op zien Zwols.jpg|thumb|right|180px|''Op zien Zwols: woordenboek van de Zwolse taal'' (2009)]]
 ===Skrieveri'je en spelling===
-'t Zwolse stadsdialekt is veural een sprèèktaal, al bint ter wel publikasies in 't Zwols. In 1908 verskeen van de and van 'Een Oud-Muzijkmeester' in de ''[[Driemaandelijkse Bladen]]'' 'Un prêutien over Zwolle van veur vieftug joar'. Dɔːrop reageerden, ok in 't Zwols, prof. G. Kalff (1909) en volgden stukken van anderen aover 't Zwolle van vrogger. De ''Provinciale Overijsselsche en Zwolsche Courant'' namp verskeiden ärtikels uut de ''Driemaandelijkse Bladen'' aover, wat ok in die krante weer veur reaksies zörgden.<ref>[http://www.wieiswieinoverijssel.nl/details2.asp?Id=122 Wie is Wie in Overijssel: Willem Kloeke]</ref>
+'t Zwolse stadsdialekt is veural een sprèèktaal, al bint ter wel publikasies in 't Zwols. In 1908 verskeen van de and van 'Een Oud-Muzijkmeester' in de ''[[Driemaandelijkse Bladen]]'' 'Un prêutien over Zwolle van veur vieftug joar'. Döörop reageerden, ok in 't Zwols, prof. G. Kalff (1909) en volgden stukken van anderen aover 't Zwolle van vrogger. De ''Provinciale Overijsselsche en Zwolsche Courant'' namp verskeiden ärtikels uut de ''Driemaandelijkse Bladen'' aover, wat ok in die krante weer veur reaksies zörgden.<ref>[http://www.wieiswieinoverijssel.nl/details2.asp?Id=122 Wie is Wie in Overijssel: Willem Kloeke]</ref>
 
 Van [[Willem Kloeke]], de va van taalkundige [[G.G. Kloeke]], kwammen in 1931 de ''Zwolsche Sketsies'' uut (Thieme). Minke Kraijer van de Dialektkringe Zwolle skrif alle wèken een kolumn in 't Zwols in uus-an-uus-kräntien ''De Peperbus'' (De Pèperbusse) en skrif ''Mien Ome Jan...'' (2007), erinneringen an aer ome, in 't Zwols en Nederlands. Van Loes van 't Haar-de Vries verskeen ok in 2007 de reseptenbundel ''In de Zwolse pot''. Veur de strèèktaal van West-Aoveriessel, wööronder 't Zwols, ef 't strèèkkenniscentrum de [[Iesselakademie]] (IJsselacademie) spellingsrichtlienden ontwörpen.<ref>[http://www.ijsselacademie.nl/ija/taal/spellingsbrochure/inhoudsopgave.asp Spellingsrichtlienden van de Iesselakademie veur t West-Aoveriessels en Oost-Veluws]</ref> Ok Wikipedie ef een eigen spelling (veur alle Nedersaksiese dialekten) ontwörpen, die is ok gebruukt in dit ärtikel.
 
