*Empty MediaWiki Message*

--- a/Manizja.mw
+++ b/Manizja.mw
@@ -5,15 +5,15 @@
 | geboren        = [[8 juli]] [[1991]]
 | sturven        = 
 | laand          = [[Ruslaand]]
-| spraoke        = [[Russisch]], [[Engels]], [[Tadzjieks]]
+| spraoke        = [[Russisk]], [[Engelsk]], [[Tadsyksk]]
 | genre          = pop, world music
 | webstee        = 
 }}
-'''Manizja Dalerovna Sangin''' of '''Manizja''', of ''MANIZHA'' (geboren as '''Manizja Dalerovna Chamrajeva''', op [[8 juli]] [[1991]] in [[Doesjanbe]] in [[Tadzjikistan]]) is ne [[Ruslaand|Russische]] [[meziek|zangeresse]].
+'''Manizja Dalerovna Sangin''' of '''Manizja''', of ''MANIZHA'' (geboren as '''Manizja Dalerovna Chamrajeva''', up [[8 juli]] [[1991]] in [[Doesjanbe|Dusjanbe]] in [[Tadzjikistan]]) is en [[Ruslaand|Russiske]] [[meziek|sangeresse]].
 
-Sy wyr in 2021 tweyds up et [[Eurovisie Songfesitival]] in [[Rötterdaam|Rötterdam]] med et leed ''Russian Woman''.
+See wyr in 2021 tweyds up et [[Eurovisie Songfesitival]] in [[Rötterdaam|Rötterdam]] med et leed ''Russian Woman''.
 
-== Diskogroafie ==
+== Diskogråfy ==
 
 === Album ===
 * ''Manuscript'' (2017)
