--- a/Sallaands.mw
+++ b/Sallaands.mw
@@ -85,7 +85,13 @@ Diftongen bint o.a. ''au'' en ''ei''. ''Ui'' kan optreden in Nederlaandse leenwo
 Wat de [[medeklinker]]s anget valt de syllabedragende nasaal op: van de ''uutgaank'' ''-en'' wört allienig de ''n'' uut-espreuken. Zo is t ''{{small()|h}}ietn/{{small()|h}}eetn'', ''loopm'', ''wärkng''. Dit wört in de mieste spellingssystemen niet uuteskreven. De [[h]] wört in t westen van t täälgebied (in en rond [[Zwolle]] en [[Kampen (Overiessel)|Kampen]]) niet uutespreuken (dit is ok nog zo in t [[Urkers]]). De [[r]] wört in de pläätsen Kampen, [[Zwolle]] en [[Dèventer|Deventer]] "brouwend" uutespreuken, mär daorbuten altied erold.
  
 ====Prosessen in de klankleer====
-Zo as boven op-emärkt, ef t Sallaands invloed ondervunnen van t Ollaands. Dit wört in de Sallaandse klinkers mitiene dudelik. Woorden mit in t [[Achterhooks|Achteroeks]], [[Tweants|Twents]] en [[Limburgs]] n ''oo'' kriegen in t Sallaands n ''oe'': ''goed'' "good", ''{{small()|h}}oek'' "hook". De ''oe'' in n woord as ''hoes'' veraanderde ier väke in ''uu'', mär dät is lange niet in alle woorden t geval. Zo kennen zwat alle Sallaandse dialekten ''huus'' en ''uut'' naost ''moes''. Dit is ok t geval in t Oost-Veluws en in sommige [[Drents]]e dialekten (en kump ok buten t Nedersaksiese täälgebied veur, bi'jveurbeeld in t [[Venray]]). De of-ekörte ''e'', die in t Nederlaands tot ''e'' ewörren is, kan in t Sallaands op drie manieren uutespreuken wörren. Rond Kampen en in pläätsen mit lichtkaans [[Drèents|Drentse]] dialektinvloed<ref>http://www.meertens.knaw.nl/vdw/2000.1/entjes.html</ref> zie'j daor n ''ee'' veur (''eten''), rond Zwolle en [[Dèventer|Deventer]] n ''ae/è'' (''èten'') en in de rest van Sallaand n körte ''e'' (''etten''). De [[kluster]]s ''old'' en ''olt'' bleven in t Sallaands be-ollen: ''old'' en ''gold''.
+Zo as boven op-emärkt, ef t Sallaands invloed ondervunnen van t Ollaands. De ''oe'' in n woord as ''hoes'' veraanderde ier väke in ''uu'', mär dät is lange niet in alle woorden t geval. Zo kennen zwat alle Sallaandse dialekten ''huus'' en ''uut'' naost ''moes''. Dit is ok t geval in t Oost-Veluws en in sommige [[Drents]]e dialekten (en kump ok buten t Nedersaksiese täälgebied veur, bi'jveurbeeld in t [[Venray]]). 
+
+Waor et [[Tweants]] een ''oo'' hef in woorden as ''goed'', ''moeder'' en ''doen'', hef et Sallaands hier een ''oe,'' met as uutzundering [[Deaventer]].<ref name=":0">[http://www.detaalvanoverijssel.nl/plaats/id:34 De Taal van Overijssel]. Over de taal van Deventer</ref> Disse veraandering lik zo in de 19e en 20e eeuw plaats evunnen te hebben.<ref>[https://www.dbnl.org/tekst/_taa008192101_01/_taa008192101_01_0003.php# De Nieuwe Taalgids. Jaargang 15]. GG Kloeke p. 41.</ref><ref>[https://www.meertens.knaw.nl/kaartenbank/bank/kaart_details/25301 Moeder]. Haar, D. van der (1967), Gællemun en 'et Gællemunegers. Een studie over Genemuiden en het Genemuider dialect. Nijmegen.
+
+Deel: p.370. Kaartnummer 33.</ref><ref>[https://www.meertens.knaw.nl/kaartenbank/bank/kaart_details/12996 Moeder]. Grootaers, L. en G.G. Kloeke (1939-1972), Taalatlas van Noord- en Zuid-Nederland (TNZN). 9 afleveringen. Leiden. Kaartnummer 6.</ref> Et Standaardnederlaands kan meugelik invloed op disse veraandering ehad hebben. Daornaost hef et Sallaands meestal een ''ie'' (/i/ of /i:/) in woorden as ''brief'', ''zien'', ''niet'' en ''biest''. Niet elke plaatse in Sallaand hef dit. Et [[Deaventers]] hef beveurbeeld in alle veer de woorden een ''ee'',<ref name=":0" /> [[Raolte]] hef nog breef en in [[Wieje]] hebt ze het oaver een ''beest'' maar kan zowal ''breef/brief'' as ''zeen''/''zien'' gebruukt wörden. Meugelik hef et Standaardnederlaands net as bi'j de veraandering nao ''oe'' invloed op de veraandering ehad..<ref>Ph Bloemhoff-de Bruijn, ''Anderhalve Eeuw Zwols Vocaalveranderingsprocessen in de periode 1838-1972''. IJsselacademie (2012). <nowiki>ISBN 978-90-6697-228-5</nowiki>.</ref> In [[Gällemuden]] kump de ''ie'' in nog meer woorden veur zo as in meest, gemeente en alleene.<ref>[http://www.detaalvanoverijssel.nl/plaats/id:14 De Taal van Overijssel]. Over de taal van Genemuiden.</ref>
+
+De of-ekörte ''e'', die in t Nederlaands tot ''e'' ewörren is, kan in t Sallaands op drie manieren uutespreuken wörren. Rond Kampen en in pläätsen mit lichtkaans [[Drèents|Drentse]] dialektinvloed<ref>http://www.meertens.knaw.nl/vdw/2000.1/entjes.html</ref> zie'j daor n ''ee'' veur (''eten''), rond Zwolle en [[Dèventer|Deaventer]] n ''ae/è'' (''èten'') en in de rest van Sallaand n körte ''e'' (''etten''). De [[kluster]]s ''old'' en ''olt'' bleven in t Sallaands be-ollen: ''old'' en ''gold''.
 
 ===Grammatika===
 De grammatica van t Sallaands ef veul typies Nedersaksiese kenmärken. In t grootste diel van Sallaand kennen ze t [[ieneidsmeervold]] op ''-t'' veur wärkwoorden in de tegenswoordige tied: ''wiej loopt, ieluu loopt, zee loopt''. Allienig in en rond Kampen eerst t (Old-)Ollaandse ieneidsmeervold op ''-en'': ''wiej, ieluu, zie lopen'' zo ok in [[Gällemuden]]. Verkleinwoorden wörren evörmp mit achtervoegsels as ''-ien'', ''-gien'', ''-pien'' en ''-tien'' en mit [[umluud]] in t grondwoord. Meervollen wörren miestal evörmp mit ''-en'' en ''-s'', net zo as in t Nederlaands. Allienig in t oosten komen meervolden op ''-e'' veur (''huus'' - ''huze''), zo as ok umluud in de meervoldsvörm (''bak'' - ''bäkke''). n aandere eigeneid van de dialekten van oostelik Sallaand is t be-old van de drie geslachten. De mieste Sallaandse dialekten kennen, zo as t Ollaands, allienig geslachtelike en onziedige woorden.
