*Empty MediaWiki Message*

--- a/Sallaands.mw
+++ b/Sallaands.mw
@@ -2,7 +2,7 @@
 !colspan="2" bgcolor="lightgrey"|<big>{{PAGENAME}}</big>
 |-
 |Nedersaksische näme
-|Sallaands, Sallands
+|Sallaan(d)s, Sallands
 |-
 |Nederlaandse näme
 |Sallands
