/* Vrooger en rechtevoort */

--- a/Tweantse_skeeldnaamns.mw
+++ b/Tweantse_skeeldnaamns.mw
@@ -74,6 +74,8 @@ Zelfs bepoalde Riessense bedriewe wordt duur de Riessenders nog aait bie n skeel
  
 Een bedrief oet Riessen hef zelfs n skeeldnaam as offisjeeln bedriefsnaam an enömmen. Et bleek nen goolden marketinggreep, want iederene in Tweante hef wal es van ''Otje van Potje'' oet Riessen eheurd. Otto ter Steege begun een weenkelsken, mear veund Ter Steege te offisjeel kleenken. 
 
+In 2020 maken den Riessensen [[podcast]] WATATA et nummer ''Buffelbert'', een parodierocknummer woerin as ze 'n Riessender wethoolder Bert Tijhof der duurhaalden. Et nummer wör lokaal wiedverspreid en et leaverden em in Riessen de bienaam Buffelbert op. In de ofleavering van 'n 14den meart van 2021, woerin as hee te gast was, gavven hee an dat ze et zelfs in 'n road van Riessen gebreuken. Hee vulden an dat ook de aandere skeeldnaams van WATATA duuredrungen warren, zo as de wethoolders ''Erik van 'n Fontein'' (Erik Wessels) en ''Briljantje'' (Jan Aanstoot), en börgemeister ''Arco van de Ketne'' (Arco Hofland).    
+
 ==Mooi um te weten==
 *De skeeldnaams wordt regelmoatig op brödkes as gewelversiering an de huze maakt. 
 *As Riessenders oargens vort goat, köant ze as kleain gräpken zeggen: ''Ik goa noar de [skeeldnaamn]''. Dan neumt ze de skeeldnaam van de wederhelfte.
