*Empty MediaWiki Message*

--- a/Sallaands.mw
+++ b/Sallaands.mw
@@ -113,6 +113,6 @@ Exakte siefers over oevule Sallaanders nog dialekt praoten bin niet bekend. t St
 * [http://www.meertens.nl/books/winkler/deventer.html t Zelfde, in t Deventers]
 
 {{SNLV}}
-{{Dialekt|sdz|Gällemuden|Algemene Nedersaksiese Schriefwieze}}
+{{Dialekt|sdz|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Sallaands| ]]
