*Empty MediaWiki Message*

--- a/Grote_Kark.mw
+++ b/Grote_Kark.mw
@@ -1,4 +1,4 @@
-'''Grote Kark''' is de naam veur een bult karken, soms ok as ze daornaost nog een andere naam hen. De kark an de Grote Markt in Zwolle steet zelfs bekend as de 'Grote of Sint-Michaëlskärke'.
+'''Grote Kark''' is de naam veur een bult karken, soms ok as ze daornaost nog een andere naam hen. De kark an de Grote Markt in Zwolle steet zelfs bekend as de '[[Grote of Sunte-Michaëlskarke|Grote of Sint-Michaëlskärke]]'.
 
 Een antal bekende karken die bekend staon as Grote Kark bin:
 
