Zwols 'Grote Kärke' enuumd; plaatien van butenkaante derbij

--- a/Grote_of_Sunte-Michaëlskarke.mw
+++ b/Grote_of_Sunte-Michaëlskarke.mw
@@ -1,9 +1,10 @@
 {{Zie dv|Veur de gelieknamige karke in Oldewater gaoj naor [[Grote of Sunte-Michaëlskarke (Oldewater)]]. Veur de vroggere kathelieke karke an de Roggenstraote in Zwolle gaoj naor [[Sunte-Michaëlskarke (Zwolle)]].}}
 
+[[Ofbeelding:Hoofdwacht Zwolle - BB - 1.jpg|thumb|300px|De Grote Karke vanof de Grote Mark eziene]]
 [[Ofbeelding:Zwolle sint michaelskerk cornelis springer.jpg|thumb|250px|De Grote Karke op een wark van [[Cornelis Springer]] (1862)]]
 [[Ofbeelding:Zwolle Sint-Michaelskerk Interieur Overzicht.JPG|thumb|250px|Binnenkaante]]
 [[Ofbeelding:Drone opnames Grote Kerk Zwolle (op muziek Zwolse Schnitger orgel, Toon Hagen).webm|thumb|Drone-opname van de binnenkaante]]
-De '''Grote of Sunte-Michaëlskarke''' (vake de '''Grote Karke''' enuumd) is een [[karkgebouw|karke]] an de [[Grote Mark (Zwolle)|Grote Mark]] in de [[Aoveriessel|Aoveriesselse]] heufdstad [[Zwolle]].
+De '''Grote of Sunte-Michaëlskarke''' (vake de '''Grote Karke''' enuumd; [[Zwols]]: '''Grote Kärke''') is een [[karkgebouw|karke]] an de [[Grote Mark (Zwolle)|Grote Mark]] in de [[Aoveriessel|Aoveriesselse]] heufdstad [[Zwolle]].
 
 De [[bescharmheilige|schutspetroon en bescharmengel]] van de karke is de [[aartsengel Michaël]], die 't in 't wier had mit de draak ([[Openbaring van Johannes]] 12:7). Een bield van de engel stiet op 't dak van 't veurpertaol. Op de [[Rooms-katheliek karkhof (Zwolle)|rooms-kathelieke begraafplaatse]] an de Bisschop Willebrandlane is der een kapel uut 1883 die ok an dizze aartsengel is opedreugen.
 
