Riege namen die 't femilieverbaand angeeft

--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -16,6 +16,20 @@ Een veurbield hiervan is '''Harm Dreum''' veur de [[Drenthe|Drèentse]] schrieve
 ====Veurname + "van" + name van partner of familie(lid)====
 Veurbielden van dizze vörm bint '''Wimken van Dientje''' veur bassist Willem Terhorst van de rockgroep [[Normaal]], en '''Meine van Meintien''' veur de [[Aoveriessel|Aoveriesselse]] törfmeter Meine Veen, die etrouwd was mit Meintje (Meintien) Bijkerk.
 
+====Riege namen die 't femilieverbaand angeeft====
+Mit een riege namen, mangs vrij uutebreid, kan anegeven wörden van wie iene der is. Dizze gewoonte kan stammen uut de tied det achternamen nog niet vastestunden en der minder veurnamen in ummeloop waren, waordeur mèensen uut mekaar ehaald mussen wörden deur de femilieverbaanden uut te spellen. Mèensen kwamen dan vake bekend te staon onder een specifieke riege namen, waor ok scheldnamen en geografische plekken in emengd kunden wörden. In [[Lucas Jonker]] zien roman ''Harm Boer'nlèv'n an de Riest'' (1929) koomt beveurbield veur: '''Jan Mulders Aorends Geu''' (Geu, zeune van Aorend, zeune van Jan Mulders) en '''Klaos van die van Jan Mulders Aorend''' (Klaos, ien van de zeuns van Aorend, zeune van Jan Mulders.)
+
+Ok in de roman ''Luuks Hilbers jonges'' (1935) deur [[Hendrik van Dijk]] uut [[Runerwold]] koomt der verscheiden veur. De titel van de roman zölf is de collectieve bijname van de zeuns van Luuks Hilbers, aover wie de roman giet. Ok wördt der onder aandern enuumd:
+*'''Jan Hilbers Jantien''' (Jantien, dochter van Jan Hilbers)
+*'''Jan Hilbers volk''' ('t gezin van Jan Hilbers)
+*'''Karst Karsiesvolk''' ('t gezin van Karst Karsies)
+*'''Karst Karsiesen Zwaane''' (Zwaane, de vrouwe of dochter van Karst Karsies)
+*'''Freerk Oorns Appien''' (Appien, zeune van Freerk Oorns [Aorends])
+*'''Oome Luuk's Fömmechien van 't Vèène''' (Fömmechien die op 't Vèène woont, de vrouwe of dochter van Oome Luuk)
+*'''Jan Beerns Kleussies volk uut De Schippers''' ('t gezin van Kleussien, dochter van Jan Beerns, det woont in De Schippers)
+*'''Hillichien van Poesten Klaos mit Eûle''' (Hillichien, dochter van Poesten Klaos, ok Klaos de Poeste, en die zien vrouwe Eûle)
+*'''Jenne van Woltertien van Jan Barties Maaie''' (Jenne, dochter van Woltertien, dochter van Maaie, dochter van Jan Barties)
+
 ====Veurname + "mit de" + beschrievend begrip====
 In dizze vörm volgt op de veurname de toevoeging "mit/met de(n)" en dan 't beschrievende begrip. 't Begrip verwis dan oftewal naor iets wat typisch an iene is, of een attribuut det een persoon vake bij hum hef of drag. Veurbielden bint [[Zwolle|Zwolse]] stadstypes as '''Anton met de bienties''' (die op kroeme bienen leup), '''Diene met de musse''' en '''Trui met de päppen''' (''päppen'' bint de titten van een koe, een verwiezing naor Trui heur fikse börsten). Een feguur uut de [[Nedersaksische sagen en legendes|Nedersaksische mythologie]] wie zien name dizze strucuur hef, is '''[[Derk med den bear|Derk mit de (zeuven) hundties]]''', ok wal '''Derk met den beer'''.
 
