--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -17,7 +17,7 @@ Een veurbield hiervan is '''Harm Dreum''' veur de [[Drenthe|Drèentse]] schrieve
 Veurbielden van dizze vörm bint '''Wimken van Dientje''' veur bassist Willem Terhorst van de rockgroep [[Normaal]], en '''Meine van Meintien''' veur de [[Aoveriessel|Aoveriesselse]] törfmeter Meine Veen, die etrouwd was mit Meintje (Meintien) Bijkerk.
 
 ====Riege namen die 't femilieverbaand angeeft====
-Mit een riege namen, mangs vrij uutebreid, kan anegeven wörden van wie iene der is. Dizze gewoonte kan stammen uut de tied det achternamen nog niet vastestunden en der minder veurnamen in ummeloop waren, waordeur mèensen uut mekaar ehaald mussen wörden deur de femilieverbaanden uut te spellen. Mèensen kwamen dan vake bekend te staon onder een specifieke riege namen, waor ok scheldnamen en geografische plekken in emengd kunden wörden. In [[Lucas Jonker]] zien roman ''Harm Boer'nlèv'n an de Riest'' (1929) koomt beveurbield veur: '''Jan Mulders Aorends Geu''' (Geu, zeune van Aorend, zeune van Jan Mulders) en '''Klaos van die van Jan Mulders Aorend''' (Klaos, ien van de zeuns van Aorend, zeune van Jan Mulders.)
+Mit een riege namen, mangs vrij uutebreid, kan anegeven wörden van wie iene der is. Dizze gewoonte kan stammen uut de tied det achternamen nog niet vastestunden en der minder veurnamen in ummeloop waren, waordeur mèensen uut mekaar ehaald mussen wörden deur de femilieverbaanden uut te spellen. Mèensen kwamen dan vake bekend te staon onder een specifieke riege namen, waor ok scheldnamen en geografische plekken in emengd kunden wörden. In [[Lucas Jonker]] zien roman ''Harm Boer'nlèv'n an de Riest'' (1929) koomt beveurbield veur: '''Jan Mulders Aorends Geu''' (Geu, zeune van Aorend, zeune van Jan Mulders) en '''Klaos van die van Jan Mulders Aorend''' (Klaos, ien van de kiender van Aorend, zeune van Jan Mulders.)
 
 Ok in de roman ''Luuks Hilbers jonges'' (1935) deur [[Hendrik van Dijk]] uut [[Runerwold]] koomt der verscheiden veur. De titel van de roman zölf is de collectieve bijname van de zeuns van Luuks Hilbers, aover wie de roman giet. Ok wördt der onder aandern enuumd:
 *'''Jan Hilbers Jantien''' (Jantien, dochter van Jan Hilbers)
