--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -45,6 +45,8 @@ Bepaolde woorden, mangs zunder dudelijke betiekenis, bint in vaste ummeloop as w
 ====Bijnamen op basis van wat iene vake zeg====
 As iene bekendstiet um een bepaolde uutspraoke kan det de basis van zien bijname vörmen. In zien ''Zwolsche Sketsies'' gef [[Willem Kloeke]] de veurbielden '''Weet iej?''', '''Za-k maer zeggen''', '''Biej veurbeeld''' en '''Ma-'k bärsten'''. De leste was een harbargier die bij 't opdissen van starke verhalen vake zee: "Ma'k bärsten, as 't niiet woeur is!"
 
+Ok '''de olde Verdikkemij''', uut [[Lucas Jonker]] zien roman ''Harm Boer'nlèv'n an de Riest'' (1929), lek hiervan een veurbield te wezen.
+
 ==Nedersaksisch==
 {|
 |
@@ -69,7 +71,9 @@ As iene bekendstiet um een bepaolde uutspraoke kan det de basis van zien bijname
 ==Bronnen==
 *[https://www.geheugenvandrenthe.nl/bijnamen Artikel "Bijnamen" op de Digitale Drentse Encyclopedie]
 *Henk Bloemhoff (2005), ''Stellingwarfs - Nederlands Verklarend Handwoordenboek'', Berkoop/Oldeberkoop: Stichting Stellingwarver Schrieversronte
+*Hendrik van Dijk (1935), ''Luuks Hilbers jonges (Dialectschetsen uit het Drentsche dorpsleven)'', Dèventer: Æ. E. Kluwer 
 *Heufdstok 'Skeldnaemen' uut W. Kloeke (1931), ''Zwolsche Sketsies'', Zutphen: W.J. Thieme & Cie
+*Lucas Jonker (1929), ''Harm Boer'nlèv'n an de Riest''
 *Minke Kraijer, Henk Mulder, Dick Visscher en Philomène Bloemhoff-de Bruijn (2008), ''Op zien Zwols: Woordenboek van de Zwolse taal'', Kampen: Iesselakkedemie
 
 ==Kiekt ok bij==
