--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -1,6 +1,8 @@
 [[Ofbeelding:Bennie_Jolink.jpg|350px|thumb|''Buizen-Beernd'' is de bijname van [[Bennie Jolink]]]]
 '''Nedersaksische bijnamen''' bint informele, vake beschrievende en vake ok grappig bedoelde namen die veur mèensen, gebouwen, streken, plaatsen of de bewoners daorvan, enzowieder gebruukt wördt en die evörmd bint op basis van de [[Nedersaksisch|Nedersaksische taal]]. As de namen niet biester vleiend bint, wördt ok wal espreuken van ''scheldnamen'' of ''schimpnamen'', al wördt dizze leste termen hier en daor ok in meer neutrale zin gebruukt.
 
+Zo'n informele (niet deur de börgerlijke staand gebruukte) name is of was niet altied bedoeld um iene de gek mit an te stikken. Een bepaold naampetroon kan ok stammen uut de tied det der miest nog gien vaste achternamen waren en mèensen daorumme op aandere, beschrievende menieren uut mekaar ehaald mussen wörden.
+
 ==Bijnamen veur personen==
 ===Vörmen===
 ====Beschrievend begrip + (veur)name====
