--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -32,6 +32,9 @@ Ok in de roman ''Luuks Hilbers jonges'' (1935) deur [[Hendrik van Dijk]] uut [[R
 *'''Hillichien van Poesten Klaos mit Eûle''' (Hillichien, dochter van Poesten Klaos, ok Klaos de Poeste, en die zien vrouwe Eûle)
 *'''Jenne van Woltertien van Jan Barties Maaie''' (Jenne, dochter van Woltertien, dochter van Maaie, dochter van Jan Barties)
 
+====Veurname + van/uut de/'t + geografische verwiezing====
+Hier wördt verwezen naor de streek waor iene woont; vake giet 't um een klein gebied det onder een onofficiële name bekendstiet. Veurbielden uut [[Lucas Jonker]] zien roman ''Harm, de boer van 't Hoogelaand'' (1939): '''Grote Klaos van 't Zaand''', '''Triene van de Oldenkaamp''', '''Marre van de Maot''', '''Derk van de Braombarg'''. In Jonker zien ''Harm Boer'nlèv'n an de Riest'' (1929) hej een '''Mannes uut de Tute'''.
+
 ====Veurname + "mit de" + beschrievend begrip====
 In dizze vörm volgt op de veurname de toevoeging "mit/met de(n)" en dan 't beschrievende begrip. 't Begrip verwis dan oftewal naor iets wat typisch an iene is, of een attribuut det een persoon vake bij hum hef of drag. Veurbielden bint [[Zwolle|Zwolse]] stadstypes as '''Anton met de bienties''' (die op kroeme bienen leup), '''Diene met de musse''' en '''Trui met de päppen''' (''päppen'' bint de titten van een koe, een verwiezing naor Trui heur fikse börsten). Een feguur uut de [[Nedersaksische sagen en legendes|Nedersaksische mythologie]] wie zien name dizze strucuur hef, is '''[[Derk med den bear|Derk mit de (zeuven) hundties]]''', ok wal '''Derk met den beer'''.
 
@@ -76,6 +79,7 @@ Ok '''de olde Verdikkemij''', uut [[Lucas Jonker]] zien roman ''Harm Boer'nlèv'
 *Hendrik van Dijk (1935), ''Luuks Hilbers jonges (Dialectschetsen uit het Drentsche dorpsleven)'', Dèventer: Æ. E. Kluwer 
 *Heufdstok 'Skeldnaemen' uut W. Kloeke (1931), ''Zwolsche Sketsies'', Zutphen: W.J. Thieme & Cie
 *Lucas Jonker (1929), ''Harm Boer'nlèv'n an de Riest''
+*Lucas Jonker (1939), ''Harm, de boer van 't Hoogelaand'', Möppelt: Boom
 *Minke Kraijer, Henk Mulder, Dick Visscher en Philomène Bloemhoff-de Bruijn (2008), ''Op zien Zwols: Woordenboek van de Zwolse taal'', Kampen: Iesselakkedemie
 
 ==Kiekt ok bij==
