--- a/Peperbusse.mw
+++ b/Peperbusse.mw
@@ -1,6 +1,6 @@
 '''Peperbusse''' kan verwiezen naor:
 
-*[[peperstreier]], een pottien veur [[peper]]
+*[[peperstreier]], een pottien veur peper
 *de [[Pèperbusse]], een laatgotische karketoren in Zwolle
 *[[Peperbus (Bargen op Zoom)]], een karketoren van rond 1370
 *[[Peperbus ('s-Heer Hendrikskiender)]], een 15e-ieuwse karketoren
