--- a/Uden.mw
+++ b/Uden.mw
@@ -12,7 +12,7 @@
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 631 
 | breedtegroad = 51/40//N
-| lengtegroad = 5/37//OL
+| lengtegroad = 5/37//O
 | verkeersoader = A50, N264, N277, N603, N605
 | netnummer = 0413
 | postkode = 5400-5409	
@@ -20,12 +20,13 @@
 }}
 
 '''Uden''' (ver[[neadersassisk]]ed: ''Üden'') is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et lyknamige [[Uden (stad)|Uden]]. Der woanet 42.293 lüde up ne uppervlakde van 67,53 km².
- 
-Andere dörpe en kernen in de gemeynde sint Volkel (3.440 inwoaners) en Odiliapeel (2.050). Wydere nåberskappen sint [[Bedaf]] · [[Biesthoek]] · [[Duifhuis (Uden)|Duifhuis]] · [[Eikenheuvel (Uden)|Eikenheuvel]] · [[Heikant (Uden)|Heikant]] · [[Hengstheuvel]] · [[Hoogveld (Uden)|Hoogveld]] · [[Hultje]] · [[Kleuter (Uden)|Kleuter]] · [[Kooldert (Uden)|Kooldert]] · [[Lagenheuvel]] · [[Lankes]] · [[Loo (Uden)|Loo]] · [[Maatsehei]] · [[Moleneind (Uden)|Moleneind]] · [[Niemeskant]] · [[Oosterens]] · [[Rakt]] · [[Schadron]] · [[Slabroek]] · [[Strepen (Uden)|Strepen]] · [[Velmolen]] · [[Vloet]] · [[Weeg]].
 
+Andere dörpe en kernen in de gemeynde sint Volkel (3.440 inwoaners) en Odiliapeel (2.050). Wydere nåberskappen sint [[Bedaf]] · [[Biesthoek]] · [[Duifhuis (Uden)|Duifhuis]] · [[Eikenheuvel (Uden)|Eikenheuvel]] · [[Heikant (Uden)|Heikant]] · [[Hengstheuvel]] · [[Hoogveld (Uden)|Hoogveld]] · [[Hultje]] · [[Kleuter (Uden)|Kleuter]] · [[Kooldert (Uden)|Kooldert]] · [[Lagenheuvel]] · [[Lankes]] · [[Loo (Uden)|Loo]] · [[Maatsehei]] · [[Moleneind (Uden)|Moleneind]] · [[Niemeskant]] · [[Oosterens]] · [[Rakt]] · [[Schadron]] · [[Slabroek]] · [[Strepen (Uden)|Strepen]] · [[Velmolen]] · [[Vloet]] · [[Weeg]].
 
 == Uutgånde verwysing ==
 * [https://www.uden.nl/ Officiele gemeyndewebsteade]
+
 {{Noord-Braobant}}
+
 [[Kategorie:Tweants artikel]]
-[[Kategorie: Gemeente in Noord-Braobant]]
+[[Kategorie:Gemeente in Noord-Braobant]]
