*Empty MediaWiki Message*

--- a/Departement_van_Tessel.mw
+++ b/Departement_van_Tessel.mw
@@ -7,9 +7,8 @@ Het depärtement bestund uut et noordelik diel van het veurmälige gewest [[Grao
 In [[1801]] met de vörming van het [[Batoafse Republiek|Bataofs Gemenebest]] ([[Staotsbewind]]) wier de herindelink van [[1798]] wier weerum edaon en kwamen de vroggere dielen van de gewesten Hollaand en Utrecht in de ni'je depärtementen [[Departement Hollaand|Hollaand]] en [[Departement Utrecht|Utrecht]]. Vlielaand en ok [[Terschelling]] kwamen bi'j het depärtement Hollaand. 
 
 {{Dialekt|sdz}}
-{{Mal:Gewestbataofserepubliek}}
-{{Mal:Departementbataofserepubliek1}}
-{{Mal:Departementbataofserepubliek2}}
+{{Mal:Bataofserepubliek}}
+{{Mal:Departementbataofsgemenebest}}
 [[Kategorie:Geschiedenis van Hollaand]]
 [[Kategorie:Geschiedenis van Utrecht]]
 [[Kategorie:Bataofse Republiek]]
