*Empty MediaWiki Message*

--- a/Departement_van_de_Rijn.mw
+++ b/Departement_van_de_Rijn.mw
@@ -14,9 +14,8 @@ De [[Waal (revier)|Waal]] vörmde de zudelike greanse van het departement.
 Toen in [[1801]] het [[Batoafse Republiek|Bataofs Gemenebest]] ([[Staotsbewind]]) wier op ericht, wier de herindieling van [[1798]] weerum edaone. De Gelderse kwartieren wieren bi'j het [[Departement Gelderlaand|Depärtement Gelderlaand]] edaon, het oostelik diel van Utrecht kwamp bi'j het [[Departement Utrecht|Depärtement Utrecht]] en de dielen van het veurmälige graofschop Hollaand kwamen bi'j het [[Departement Hollaand|Depärtement Hollaand]].
 
 {{Dialekt|sdz}}
-{{Gewestbataofserepubliek}}
-{{Departementbataofserepubliek1}}
-{{Departementbataofserepubliek2}}
+{{Mal:Bataofserepubliek}}
+{{Mal:Departementbataofsgemenebest}}
 
 [[Kategorie:Bataofse Republiek|Rijn]]
 [[Kategorie:Geschiedenis van Gelderlaand]]
