*Empty MediaWiki Message*

--- a/Departement_van_de_Dommel.mw
+++ b/Departement_van_de_Dommel.mw
@@ -20,9 +20,8 @@ Het depärtement bestund uut veurmälige gewesten [[Bataofs-Braobaant]] (zunder 
 In [[1801]] wieren de ni'je depärtementen van [[1798]] wier vot edaone toen het [[Batoafse Republiek|Bataofs Gemenebest]] wier op ericht ([[Staotsbewind)]]. De gebieden van het depärtement kwamen in de ni'je depärtementen [[Bataofs-Braobaant]], [[Departement Gelderlaand|Gelderlaand]] en [[Departement Hollaand|Hollaand]].
 
 {{Dialekt|sdz}}
-{{Gewestbataofserepubliek}}
-{{Departementbataofserepubliek1}}
-{{Departementbataofserepubliek2}}
+{{Mal:Bataofserepubliek}}
+{{Mal:Departementbataofsgemenebest}}
 
 [[Kategorie:Bataofse Republiek]]
 [[Kategorie:Geschiedenis van Hollaand]]
