*Empty MediaWiki Message*

--- a/Departement_van_de_Delf.mw
+++ b/Departement_van_de_Delf.mw
@@ -6,9 +6,9 @@ Het gebied wier evörmd deur het midden van het veurmälige gewest [[Graofschop 
 In [[1801]] wieren de ni'je depärtementen weerum edaone toen het [[Batoafse Republiek|Bataofs Gemenebest]] ([[Staotsbewind]]) wier opericht. Het depärtement op het oosten nao kwamp in het ni'je [[Departement Hollaand|Depärtement Hollaand]] terechte; het oosten kwamp bi'j het ni'je [[Departement Utrecht|Depärtement Utrecht]].
 
 {{Dialekt|sdz}}
-{{Mal:Gewestbataofserepubliek}}
-{{Mal:Departementbataofserepubliek1}}
-{{Mal:Departementbataofserepubliek2}}
+{{Mal:Bataofserepubliek}}
+{{Mal:Departementbataofsgemenebest}}
+
 [[Kategorie:Bataofse Republiek]]
 [[Kategorie:Geschiedenis van Utrecht]]
 [[Kategorie:Geschiedenis van Hollaand]]
