*Empty MediaWiki Message*

--- a/Gelre.mw
+++ b/Gelre.mw
@@ -93,6 +93,7 @@ Bi-j et [[Verdrag van Wenen]] van [[1815]] kwam et westeleken deel van [[Pruusie
 *[http://geneaknowhow.net/regel/kaarten/kaart1580-1794-overkw-gelder.htm Kaarte (met de verdealing van et Oaverkwarteer)]
 *[http://www.rechten.unimaas.nl/lrg/Overkwartier%20van%20Gelre.htm Rechtsgeskiednis van et Oaverkwarteer]
 
+{{Mal:Bataofserepubliek}}
 
 [[Kategorie:Achterhooks_artikel]]
 [[Kategorie:Geschiedenis van Gelderlaand]]
