*Empty MediaWiki Message*

--- a/Ommelanden.mw
+++ b/Ommelanden.mw
@@ -38,6 +38,7 @@ In [[1619]] kocht de Stad Grunnen de Heerlekhaid [[Westerwoolde (streek)|Westerw
 De noam Ommelanden wordt tegenswoordeg nog mor wieneg bruukt, in tieds dat in de [[19e eeuw|19e aiw]] (200 joar noa de ofschaffen van de Ommelanden) alle Grunnegers de grenzen en noamen van de Ommelanden kenden. De noamen van de Ommelanden binnen nau allend nog trug te vienn ien noamn van gemainten Oldambt en Westerwoolde en de voetbalclubs, reviertkes of radiostations (bieveurbeeld: Oldambster Boys en Radio Westerwolde). Ook t [[Ommelander Ziekenhuis Groningen]] (OZG) in Scheemde en de [[Ommelanderzeediek]], de zeediek van Grunnen, heugt aan de middelaiwse goen (''oetsproken as go-en'').
 
 {{GrunnegerOmmelanden}}
+{{Mal:Bataofserepubliek}}
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Streek in Grunnen]]
