*Empty MediaWiki Message*

--- a/Vught.mw
+++ b/Vught.mw
@@ -19,7 +19,7 @@
 | webstie = [http://www.vught.nl/ www.vught.nl]
 }}
 
-'''Vught''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is [[NAAM]]. Der woanet 26.797 lüde up ne uppervlakde van 34,69 km². 
+'''Vught''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et lyknamige [[Vught (dorp)|Vught]]. Der woanet 26.797 lüde up ne uppervlakde van 34,69 km². 
 Andere dörpe en kernen in de gemeynde sint  Helvoirt en Cromvoirt.
 
 == Bekende lüde uut de gemeynde ==
