*Empty MediaWiki Message*

--- a/Spelling_van_de_ao_of_oa.mw
+++ b/Spelling_van_de_ao_of_oa.mw
@@ -29,7 +29,7 @@ Hieronder steet een overzichte waor as de streektaalorgenisasies de ''ao'' en ''
 
 Zoa-j hierboven zien zo-j op de [[Veluwe]] en in de [[Achterhoek]] en gao zo mar deur een ''ao'' mutten schrieven, mar vake gebeurt dat neet, meensen gebruken dan de ''oa'' of heel iets aanders.
 
-Een spellingssysteem dat een schofjen gebruuk wönnen en gien ''ao'' mar oek gien ''oa'' gebruken, is de [[Vosbergenschriefwiese]]. In disse spelling gebruken ze de [[å]].
+Een spellingssysteem dat een schofjen gebruuk wönnen en gien ''ao'' mar oek gien ''oa'' gebruken, binnen de [[Vosbergenschriefwiese]] en [[Nysassiske Skryvwyse]]. In disse spelling gebruken ze de [[å]].
 
 De [[Sass'sche Schrievwies]] veur 't [[Platduuts]] gebruuk ''aa'', dat veur een Grunningsachtige ''oa'' steet.
 
