--- a/Spelling_van_de_ao_of_oa.mw
+++ b/Spelling_van_de_ao_of_oa.mw
@@ -35,5 +35,7 @@ De [[Sass'sche Schrievwies]] veur 't [[Platduuts]] gebruuk ''aa'', dat veur een 
 
 Sommigen schrievers gebruken veur de Nederlaanse ''aa'' (bieveurbeeld: ''haar'') wel de ''ao'' (''haor'') mar neet veur de ''oo'' (bieveurbeeld: ''over'') dat wonnen dan weer eschreven mit een ''oa'': ''oaver''. Aandere Nedersaksische dialeksprekers zegen - en schrieven - gewoon ''over''.
 
+In de [[Nysassiske Skryvwyse]], die sinds 2018 bestaot, wönnen de å en de oa naost mekaar gebruukt. Dit hangt of van de woordherkomst. As een woord in et [[Oldsaksisch]] een o had (en vandaag de dag de donkere a-klank) dan is et ''oa''. Had et Oldsaksisch een ''a'' die nu as donkere a-klank klinkt, dan kriegt et een å.
+
 [[Kategorie:West-Veluws_artikel]]
 [[Kategorie:Nedersaksiese spellingsrichliene]]
