/* Grunnen, Oostfraislaand, Selterlaand */ Knellens

--- a/Nedersaksische_veurnamen.mw
+++ b/Nedersaksische_veurnamen.mw
@@ -365,7 +365,7 @@ De tabel mit noamen geft n liest weer van Grunnegse veurnoamen, omzet vanoet t N
 |Kneel
 |Cornelia
 |-
-|Kneles, Kneels
+|Kneles, Kneels, Knellens
 |Kneelis
 |Cornelis
 |-
