Diggelschip enuumd; nog naokieken op West-Veluws

--- a/Diggelwark.mw
+++ b/Diggelwark.mw
@@ -8,9 +8,11 @@
 
 Onder diggelwark in eenvoudige vorm wonnen veurwarpen verstaon, dee emaak bin van [[leem]] of klei, dat vake langes revieren evunnen wonnen. 't Wonnen nao dreuging ebakken en daordeur wonnen 't hard. De grondstof zal dan neet meer deur waoter verweek wonnen en uutmekaarvallen. Deur de hoge temperetuur bie 't bakken bin de kleideeltjes an mekaar eklit. Goeie klei veur disse predukken is: [[kaölien]], een fiene witbakkende kleisoorte. 
 
-Bie gebruuk van mindere soorten klei ku-j neet mit hoge tempereturen bakken en blif 't warkstuk poreus. 't Mut dan mit een glezuurlaagjen bedek wonnen um waoterdichte te wonnen. Veur glezuur, een glassoorte, gebruuk je lood- of tinglezuur. 't Smelt bie een neet al te hoge temperetuur en vleuit over 't oppervlak van 't preduk. 't Glezuur kan deurzichtig of dekkend van kleur ween. Glezuren wonnen oek gebruuk um 't diggelwark van verschillende kleuren te kunnen veurzien. 
+Bie gebruuk van mindere soorten klei ku-j neet mit hoge tempereturen bakken en blif 't warkstuk poreus. 't Mut dan mit een glezuurlaagjen bedek wonnen um waoterdichte te wonnen. Veur glezuur, een glassoorte, gebruuk je lood- of tinglezuur. 't Smelt bie een neet al te hoge temperetuur en vleuit over 't oppervlak van 't preduk. 't Glezuur kan deurzichtig of dekkend van kleur ween. Glezuren wonnen oek gebruuk um 't diggelwark van verschillende kleuren te kunnen veurzien.
 
 Diggelwark mit glezuur derop wonnen vake [[keremiek]] eneumd.
+
+In [[Grunnen (provìnzie)|Grunningen]] en [[Drenthe]] was een '''diggelschip''' een pottenschute die bij de dörpen rondging om eerdewärk, porselein, glas enzowieder te verkopen.
 
 == Verschillende vormen van diggelwark ==
 [[Bestaand:holywaterjug.jpg|thumb|200px|Een kruukjen van diggelwark bedoeld um [[wijwaoter]] mee naor huus te nemen en te bewaoren. 't Kruukjen kan esleuten wonnen mit een kurken dop.]]
@@ -32,8 +34,7 @@ Diggelwark mit glezuur derop wonnen vake [[keremiek]] eneumd.
 ** ''diggelgerak''
 ** ''diggelgoed'', ''diggelgooud'', ''diggelgoud''
 ** ''steengoed'', ''stiengoed'', ''steingoud''
-** De eerste dichtbundel in 't Drèents (deur [[L.A. Roessingh]]) het ''Diggelhoes'', 't woord veur een 
-stee daoras kiender mit schaarven (diggels) speult.
+** De eerste dichtbundel in 't Drèents (deur [[L.A. Roessingh]]) het ''Diggelhoes'', 't woord veur een stee daoras kiender mit schaarven (diggels) speult.
 * [[Grönnegs]]:
 ** ''diggelgoud''
 ** ''staingoud''
