/* Prosessen in de klankleer */

--- a/Sallaands.mw
+++ b/Sallaands.mw
@@ -89,7 +89,7 @@ Zo as boven op-emärkt, ef t Sallaands invloed ondervunnen van t Ollaands. De ''
 
 Waor et [[Tweants]] een ''oo'' hef in woorden as ''goed'', ''moeder'' en ''doen'', hef et Sallaands hier een ''oe,'' met as uutzundering [[Deaventer]].<ref name=":0">[http://www.detaalvanoverijssel.nl/plaats/id:34 De Taal van Overijssel]. Over de taal van Deventer</ref> In [[Olst]] en [[Wye|Wieje]] is hier ook een ''oo'' te heuren, maar niet in de directe umgeaving buten de twie dörpen.<ref>[http://www.detaalvanoverijssel.nl/plaats/id:28 De Taal van Overijssel]. Over de taal van Wijhe</ref><ref>[http://www.detaalvanoverijssel.nl/plaats/id:32 De Taal van Overijssel]. Over de taal van Olst</ref> Disse veraandering lik zo in de 19e en 20e eeuw plaats evunnen te hebben.<ref>[https://www.dbnl.org/tekst/_taa008192101_01/_taa008192101_01_0003.php# De Nieuwe Taalgids. Jaargang 15]. GG Kloeke p. 41.</ref><ref>[https://www.meertens.knaw.nl/kaartenbank/bank/kaart_details/25301 Moeder]. Haar, D. van der (1967), Gællemun en 'et Gællemunegers. Een studie over Genemuiden en het Genemuider dialect. Nijmegen.
 
-Deel: p.370. Kaartnummer 33.</ref><ref>[https://www.meertens.knaw.nl/kaartenbank/bank/kaart_details/12996 Moeder]. Grootaers, L. en G.G. Kloeke (1939-1972), Taalatlas van Noord- en Zuid-Nederland (TNZN). 9 afleveringen. Leiden. Kaartnummer 6.</ref> Et Standaardnederlaands kan meugelik invloed op disse veraandering ehad hebben. Daornaost hef et Sallaands meestal een ''ie'' (/i/ of /i:/) in woorden as ''brief'', ''zien'', ''niet'' en ''biest''. Niet elke plaatse in Sallaand hef dit. Et [[Deaventers]] hef beveurbeeld in alle veer de woorden een ''ee'',<ref name=":0" /> [[Raolte]] hef nog breef en in [[Wieje]] hebt ze het oaver een ''beest'' maar kan zowal ''breef/brief'' as ''zeen''/''zien'' gebruukt wörden. Meugelik hef et Standaardnederlaands net as bi'j de veraandering nao ''oe'' invloed op de veraandering ehad.<ref>Ph Bloemhoff-de Bruijn, ''Anderhalve Eeuw Zwols Vocaalveranderingsprocessen in de periode 1838-1972''. IJsselacademie (2012). <nowiki>ISBN 978-90-6697-228-5</nowiki>.</ref> In [[Gällemuden]] kump de ''ie'' in nog meer woorden veur zo as in meest, gemeente en alleene.<ref>[http://www.detaalvanoverijssel.nl/plaats/id:14 De Taal van Overijssel]. Over de taal van Genemuiden.</ref>
+Deel: p.370. Kaartnummer 33.</ref><ref>[https://www.meertens.knaw.nl/kaartenbank/bank/kaart_details/12996 Moeder]. Grootaers, L. en G.G. Kloeke (1939-1972), Taalatlas van Noord- en Zuid-Nederland (TNZN). 9 afleveringen. Leiden. Kaartnummer 6.</ref> Et Standaardnederlaands kan meugelik invloed op disse veraandering ehad hebben. Daornaost hef et Sallaands meestal een ''ie'' (/i/ of /i:/) in woorden as ''brief'', ''zien'', ''niet'' en ''biest''. Niet elke plaatse in Sallaand hef dit. Et [[Deaventers]] hef beveurbeeld in alle veer de woorden een ''ee'',<ref name=":0" /> [[Raolte]] hef nog ''breef'' en in [[Wieje]] hebt ze het oaver een ''beest'' maar kan zowal ''breef/brief'' as ''zeen''/''zien'' gebruukt wörden. Meugelik hef et Standaardnederlaands net as bi'j de veraandering nao ''oe'' invloed op de veraandering ehad.<ref>Ph Bloemhoff-de Bruijn, ''Anderhalve Eeuw Zwols Vocaalveranderingsprocessen in de periode 1838-1972''. IJsselacademie (2012). <nowiki>ISBN 978-90-6697-228-5</nowiki>.</ref> In [[Gällemuden]] kump de ''ie'' in nog meer woorden veur zo as in ''meest'', ''gemeente'' en ''alleene''.<ref>[http://www.detaalvanoverijssel.nl/plaats/id:14 De Taal van Overijssel]. Over de taal van Genemuiden.</ref>
 
 De of-ekörte ''e'', die in t Nederlaands tot ''e'' ewörren is, kan in t Sallaands op drie manieren uutespreuken wörren. Rond Kampen en in pläätsen mit lichtkaans [[Drèents|Drentse]] dialektinvloed<ref>http://www.meertens.knaw.nl/vdw/2000.1/entjes.html</ref> zie'j daor n ''ee'' veur (''eten''), rond Zwolle en [[Dèventer|Deaventer]] n ''ae/è'' (''èten'') en in de rest van Sallaand n körte ''e'' (''etten''). De [[kluster]]s ''old'' en ''olt'' bleven in t Sallaands be-ollen: ''old'' en ''gold''.
 
