*Empty MediaWiki Message*

--- a/Sallaands.mw
+++ b/Sallaands.mw
@@ -14,7 +14,7 @@
 |Gelderlaand, Oaveriessel en een diel van Dreanthe
 |-
 |Antal sprekkers
-|292.000 (thuus). 338.000 (totaal)<ref>Taaltelling Nedersaksisch (2005)</ref><ref>Excl. Sallaands gebied in Dreanthe, Tweante en Gelderlaand. Incl Zuud-Dreants gebied in Oaveriessel, Stellingwärfs gebied ten zuden van Stienwiekerlaand en dielen van het Tweants</ref>
+|292.000 (thuus). 338.000 (totaal)<ref>H. Bloemhof Taaltelling Nedersaksisch (2005)</ref><ref>Excl. Sallaands gebied in Dreanthe, Tweante en Gelderlaand. Incl Zuud-Dreants gebied in Oaveriessel, Stellingwärfs gebied ten zuden van Stienwiekerlaand en dielen van het Tweants</ref>
 |-
 |Dialecten
 |Stadsdialecten: [[Zwols]], [[Kampers]] en [[Deamters]]
