[[:Kategorie:Sallaands]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Sallaands.mw
+++ b/Sallaands.mw
@@ -114,3 +114,5 @@ Exakte siefers over oevule Sallaanders nog dialekt praoten bin niet bekend. t St
 
 {{SNLV}}
 {{Dialekt|sdz}}
+
+[[Kategorie:Sallaands| ]]
