*Empty MediaWiki Message*

--- a/Tanzania.mw
+++ b/Tanzania.mw
@@ -63,7 +63,7 @@ Ungeveyr 38% van et land steyt under natuursküt. Tanzania hevt 16 nationale par
 In et land leavet ne unmündige verskeidenheid an deers. Up de [[Serengeti]]vlakte doot miljonen [[gnu]], [[zebra]] en andere ko-achtigen alle jåren med an den [[Grouten Trek]]. Wyders gevt et noch ngeveyr 275 [[Amfibieën|amfibyen]]- en 130 [[kroepdeers|kruupdeer]]soorten.
 
 ==Politik==
-Tanzania is eygenlik ne grundwettelike republik, mär in warkelikheid is der mär eyne partye an de macht: de [[Chama Cha Mapinduzi]] (CCM). Seyt 2015 is [[John Magufuli]] president. Synen eyrsten minister is [[Kassim Majaliwa]].
+Tanzania is eygenlik ne grundwettelike republik, mär in warkelikheid is der mär eyne partye an de macht: de [[Chama Cha Mapinduzi]] (CCM). Seyt 2021 is [[Samia Suluhu]] president. Synen eyrsten minister is [[Kassim Majaliwa]].
 
 ==Lüde==
 In Tanzania woanet in [[2020]] ungeveyr 59.023.784 lüde<ref>https://www.worldometers.info/world-population/tanzania-population/ worldometers.info. "Tanzania". Bekeaken up 2 februåry 2020.]</ref> In ne telling in [[2012]] was dat noch 44.928.923. De inwoaners höyrt by ten minsten 125 verskillende volker, wårvan as de meyste by et [[bantu (volk)|bantu]]stamverband höyret. De [[sukuma]], [[nyamwezi]], [[chagga]] en [[haya]] hebbet allemål meyr as eyn miljoon lüde. Et oavergroute deyl van de tanzanianen (99%) is van oorsprung afrikaansk. Een klein deyl is van arabiske, [[Europa|europääske]] en [[Azië|asiatiske]] kumaf. 
