--- a/Vechte.mw
+++ b/Vechte.mw
@@ -1,5 +1,5 @@
 [[Image:Location Overijsselse Vecht.PNG|thumb|250px|De Vechte]]
-De '''Vechte''' is 'n [[revier|regenwäterreviere]] in [[Duutslaand]] en [[Nederlaand]] ([[Oaveriessel]]). De reviere is 167 kilometer laank, woarvan 60 km in Nederlaand. Heur oorsprunk lig in 't [[Munsterlaand]] en ze mondt bi-j [[Zwolle]] uut in 't [[Zwärte Wäter]] mit 'n debiet van 45 töt 83 kubieke meter per sekonde. 't Streumgebied van de Vechte beslöt 3780 vierkaante kilometer. D' eerste schriftlike vermelding van de Vechte stamp uut um-en-bi-j [[1232]] en stiet in de [[Quedam narracio]], tenzi-j de [[Vidrus]] doaras [[Tacitus]] en [[Ptolemaeus]] 't oaver hebt dezölfde revier is as de Vechte.
+De '''Vechte''' ([də v̯ɛχtə]) is 'n [[revier|regenwäterreviere]] in [[Duutslaand]] en [[Nederlaand]] ([[Oaveriessel]]). De reviere is 167 kilometer laank, woarvan 60 km in Nederlaand. Heur oorsprunk lig in 't [[Munsterlaand]] en ze mondt bi-j [[Zwolle]] uut in 't [[Zwärte Wäter]] mit 'n debiet van 45 töt 83 kubieke meter per sekonde. 't Streumgebied van de Vechte beslöt 3780 vierkaante kilometer. D' eerste schriftlike vermelding van de Vechte stamp uut um-en-bi-j [[1232]] en stiet in de [[Quedam narracio]], tenzi-j de [[Vidrus]] doaras [[Tacitus]] en [[Ptolemaeus]] 't oaver hebt dezölfde revier is as de Vechte.
 
 In 't [[Nederlaands|Nederlaans]] nuumt ze de Vechte de 'Vecht', en vake de 'Overijsselse Vecht' umde'j joa ok de [[Vecht (revier)|Utrechtse Vecht]] hebt. In Duutslaand het de reviere de 'Vechte'. 't Oaveriesselse laandschop um de Vechte nuumt ze 't (Oaveriessels) [[Vechtdal]].
 
