--- a/Hiphop.mw
+++ b/Hiphop.mw
@@ -29,7 +29,7 @@ In [[Nedderlaand]] begun in de neggentiger joarn de groep [[Osdorp Posse]] oet [
 n Eersten Nedderlaandsen raphit was van [[Extince]], den in [[1995]] op nummer 1 in de hitliest köm met zin nummer ''Spraakwater''. De Nederhop bleef hiernoa gröain met nieje artiesten zo as [[Brainpower]], [[Spookrijders]] en [[Opgezwolle]]. Annere grote nederhophits warn van [[Def Rhymez]], de [[Partysquad]], [[Ali B]], [[Lange Frans]] en [[Baas B]]. De niejste gennerasie populeare rappers zint onner mear de [[Jeugd van Tegenwoordig]].
 
 == Neersassies ==
-In t [[Neersassies]] wörd nit völle met rap doan. De groep met t meest sukses zunt de [[Fofftig Penns]] oet [[Berlien]]. In [[Grunnen (provìnzie)|Grunning]] zunt dr de [[Bond tegen Harries]] (hiphop/[[hardcore]]) en [[Wat Aans!]]. As dr in t Neddersassies rapt wörd, is dat ok vaak nich serieus bedoold, zo as bv. van [[Jelmer Gussinklo]]. Toch zunt dr lokaal wal völle rapartiesten, dee meestal in t Neerlaands rapn doot. Zo he'j bv. Siroc oet [[Riesn]] of [[Tomba Artz]] oet [[Eanske]]. De bekeandste rapgroep oet t Neersassiese gebeed, [[Opgezwolle]], kump oet [[Zwolle]]. Bro wat is deze spelling k heb dit nodig voor me presentatie komt dese chap😭🤚🏼.
+In t [[Neersassies]] wörd nit völle met rap doan. De groep met t meest sukses zunt de [[Fofftig Penns]] oet [[Berlien]]. In [[Grunnen (provìnzie)|Grunning]] zunt dr de [[Bond tegen Harries]] (hiphop/[[hardcore]]) en [[Wat Aans!]]. As dr in t Neddersassies rapt wörd, is dat ok vaak nich serieus bedoold, zo as bv. van [[Jelmer Gussinklo]]. Toch zunt dr lokaal wal völle rapartiesten, dee meestal in t Neerlaands rapn doot. Zo he'j bv. Siroc oet [[Riesn]] of [[Tomba Artz]] oet [[Eanske]]. De bekeandste rapgroep oet t Neersassiese gebeed, [[Opgezwolle]], kump oet [[Zwolle]].
 
 == Bekeande hiphopartieste ==
 {|
