--- a/Basiliek_van_Oonze-Lieve-Vrouwe-ten-Hemelopneming.mw
+++ b/Basiliek_van_Oonze-Lieve-Vrouwe-ten-Hemelopneming.mw
@@ -1,3 +1,4 @@
+[[Ofbeelding:Catholic_basilica_"_Onze_lieve_vrouwe"_at_Zwolle_with_the_famous_75_m_height_tower_"Peperbus"_-_panoramio.jpg|thumb|Butenanzicht van de basiliek, mit links de Pèperbusse]]
 [[Ofbeelding:Zwolle Basiliek.JPG|thumb|Blik op 't koor van de basiliek]]
 De '''Basiliek van Oonze-Lieve-Vrouwe-ten-Hemelopneming''' is een [[middeleeuwen|middelieuwse]] [[kruuskarke]] an de Ossenmark in de [[Aoveriessel|Aoveriesselse]] heufdstad [[Zwolle]]. Van oorsprong was de karke een kapel, de Oonze-Lieve-Vrouwekapel, die ondergeschikt was an de [[Grote of Sunte-Michäelskarke|Sunte-Michaëlskarke]]. De toren van de karke stiet bekend as de [[Pèperbusse]] en geldt as een symbool van Zwolle.
 
